Add some comment to parentChildComponentInteraction project

--- a/parentChildComponentInteraction/src/app/cockpit/cockpit.component.html
+++ b/parentChildComponentInteraction/src/app/cockpit/cockpit.component.html
@@ -44,7 +44,7 @@
     1. We can access input field data using two way data binding
             ex- [(ngModel)]='newServerContent'
     2. We can access input field dada using local references
-            ex- #serverName
+            ex- #serverName     (serverName.value)
     3. We can access input field dada using @ViewChild() method 
             ex @ViewChild('newServerContent') newServerContent: ElementRef;
                     this.newServerContent.nativeElement.value       
