--- a/CrudFakeAPI/src/app/Employee/emp-list/emp-list.component.html
+++ b/CrudFakeAPI/src/app/Employee/emp-list/emp-list.component.html
@@ -16,8 +16,18 @@
           <td>{{ emp.name }}</td>
           <td>{{ emp.age }}</td>
           <td>{{ emp.email }}</td>
-          <td class="text-center"><button class="btn btn-sm btn-danger" (click)='deleteEmp( emp.id )'>Delete</button></td>
-          <td class="text-center"><button class="btn btn-sm btn-primary" (click)='editEmployee(emp)'>Edit</button></td>
+          <td class="text-center">
+            <button class="btn btn-sm btn-danger" 
+            type="button" 
+            (click)='deleteEmp( emp.id )'>Delete
+            </button>
+          </td>
+          <td class="text-center">
+            <button class="btn btn-sm btn-primary" 
+              type="button" 
+              (click)='editEmployee(emp)'>Edit
+            </button>
+          </td>
         </tr>
       </tbody>
     </table>
